[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/basilisk/basilisk.gd" type="Script" id=1]
[ext_resource path="res://characters/basilisk/basilisk.svg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 41.5303, 160.637 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 71.0445, 38.1232 )

[node name="basilisk" type="RigidBody2D" groups=[
"characters",
"enemies",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="attack_area" type="Area2D" parent="."]

position = Vector2( -127.328, -53.7129 )
scale = Vector2( 10.6406, 2.30353 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]

position = Vector2( 10.7284, -6.65263 )
shape = SubResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]

position = Vector2( -22.9207, -45.8414 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="base" type="Node2D" parent="."]

position = Vector2( 2.54761, -48.7153 )

[node name="basilisk" type="Sprite" parent="base"]

position = Vector2( -26.5902, 6.65101 )
texture = ExtResource( 2 )

[node name="projectile_spawn" type="Position2D" parent="base"]

position = Vector2( -69.5402, 20.686 )

[connection signal="body_entered" from="." to="." method="_on_basilisk_body_entered"]

[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]

[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]


